--- a/decks/templates/decks/card_confirm_delete.html
+++ b/decks/templates/decks/card_confirm_delete.html
@@ -7,7 +7,7 @@
         <p>Are you sure you want to delete this card?</p>
         {% include "decks/_card_preview.html" %}
         {{ form }}
-        <a href="{{ card.get_absolute_url }}" class="btn-btn-primary" style="color: black; background-color: #c8d2cf; border: 2px solid black;">Cancel</a>
-        <input type="submit" value="Confirm" class="btn-btn-danger" style="color: black; background-color: #BFD0CD; border: 2px solid black;">
+        <a href="{{ card.get_absolute_url }}" class="btn-btn-primary">Cancel</a>
+        <input type="submit" value="Confirm" class="btn-btn-danger">
     </form>
 {% endblock content %}
