--- a/decks/templates/decks/deck_confirm_delete.html
+++ b/decks/templates/decks/deck_confirm_delete.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
+    <link rel="stylesheet" href="{% static 'core/deck_confirm_delete.css' %}">
     <form method="post" style="color: black; margin-top: 30px;">
         {% csrf_token %}
         <p>Are you sure you want to delete flashcard set named {{ object.name }}?</p>
         {{ form }}
-        <a href="{{ object.get_absolute_url }}" class="btn btn-primary" style="color: black; background-color: #c8d2cf; border: 2px solid black;">Cancel</a>
-        <input type="submit" value="Confirm" class="btn btn-danger" style="color: black; background-color: #BFD0CD; border: 2px solid black;">
+        <a href="{{ object.get_absolute_url }}" class="btn btn-primary btn-cancel">Cancel</a>
+        <input type="submit" value="Confirm" class="btn btn-danger btn-confirm">
     </form>
 {% endblock content %}
