Fixed the deck confirm delete page to pass the CI tests.

--- a/decks/templates/decks/deck_confirm_delete.html
+++ b/decks/templates/decks/deck_confirm_delete.html
@@ -2,9 +2,9 @@
 {% load static %}
 {% block content %}
     <link rel="stylesheet" href="{% static 'core/deck_confirm_delete.css' %}">
-    <form method="post" style="color: black; margin-top: 30px;">
+    <form method="post">
         {% csrf_token %}
-        <p>Are you sure you want to delete flashcard set named {{ object.name }}?</p>
+        <p class="delete-deck-form">Are you sure you want to delete flashcard set named {{ object.name }}?</p>
         {{ form }}
         <a href="{{ object.get_absolute_url }}" class="btn btn-primary btn-cancel">Cancel</a>
         <input type="submit" value="Confirm" class="btn btn-danger btn-confirm">
