--- a/decks/templates/decks/shared.html
+++ b/decks/templates/decks/shared.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <link rel="stylesheet" href="{% static 'core/shared.css' %}">
-    <form class="d-flex" role="search" style="margin-top: 30px;">
+    <form class="d-flex" role="search">
         <input class="form-control me-2"
                name="search"
                type="search"
