--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,39 +1,40 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block content %}
+<link rel="stylesheet" href="{% static 'core/login.css' %}">
 
 {% if form.errors %}
-<p style="background-color: yellow; color: red; margin-top: 30px;">Your username and password didn't match. Please try again.</p>
+    <p class="error-message">Your username and password didn't match. Please try again.</p>
 {% endif %}
 
 {% if next %}
     {% if user.is_authenticated %}
-    <p>Your account doesn't have access to this page. To proceed,
-    please login with an account that has access.</p>
+        <p class="info-message">Your account doesn't have access to this page. To proceed,
+        please login with an account that has access.</p>
     {% else %}
-    <p>Please login to see this page.</p>
+        <p class="info-message">Please login to see this page.</p>
     {% endif %}
 {% endif %}
 
-<form method="post" action="{% url 'login' %}">
-{% csrf_token %}
-<table>
-<tr>
-    <td style="color: black; margin-top: 30px;">{{ form.username.label_tag }}</td>
-    <td>{{ form.username }}</td>
-</tr>
-<tr>
-    <td style="color: black;">{{ form.password.label_tag }}</td>
-    <td>{{ form.password }}</td>
-</tr>
-</table>
+<form method="post" action="{% url 'login' %}" class="login-form">
+    {% csrf_token %}
+    <table>
+        <tr>
+            <td class="label">{{ form.username.label_tag }}</td>
+            <td>{{ form.username }}</td>
+        </tr>
+        <tr>
+            <td class="label">{{ form.password.label_tag }}</td>
+            <td>{{ form.password }}</td>
+        </tr>
+    </table>
 
-<input type="submit" value="login" style="background-color: #BFD0CD; color: rgb(0, 0, 0); border: 3px solid black;">
-<input type="hidden" name="next" value="{{ next }}">
+    <input type="submit" value="Login" class="login-button">
+    <input type="hidden" name="next" value="{{ next }}">
 </form>
 
-{# Assumes you set up the password_reset view in your URLconf #}
-<p style="color: rgb(0, 0, 0);">No account? <a href="{% url 'signup' %}">Sign up</a></p>
-<p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+<p class="auth-links">No account? <a href="{% url 'signup' %}">Sign up</a></p>
+<p class="auth-links"><a href="{% url 'password_reset' %}">Lost password?</a></p>
 
 {% endblock content %}
