--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,7 +2,7 @@
 {% load static %}
 
 {% block content %}
-<link rel="stylesheet" href="{% static 'core/login.css'%}">
+<link rel="stylesheet" href="{% static 'core/login.css' %}">
 
 
 <div class="login_container">
@@ -14,7 +14,10 @@
                 <div class="login_bar" style="margin-bottom: 4vh;">{{ form.username }}</div>
                 <div class="label">{{ form.password.label_tag }}</div>
                 <div class="login_bar">{{ form.password }}</div>
-                <p><a class="login_underline" href="{% url 'password_reset' %}">Forgot password?</a><a class="login_underline" style="margin-left: .7vw;" href="{% url 'signup' %}"> Sign up?</a></p>
+                <p>
+                    <a class="login_underline" href="{% url 'password_reset' %}">Forgot password?</a>
+                    <a class="login_underline" style="margin-left: .7vw;" href="{% url 'signup' %}"> Sign up?</a>
+                </p>
 
 
         </div>
