--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -17,6 +17,8 @@
     </p>
     <button id="start-btn">Start</button>
     <div class="border rounded m-3" id="card"></div>
+    <input type="text" id="answer">
+    <button id="submit-btn">Submit</button>
     <div class="back-deck-button">
         <a href="{{ deck.get_absolute_url }}">Back to Deck</a>
     </div>
