--- a/decks/templates/decks/deck_list.html
+++ b/decks/templates/decks/deck_list.html
@@ -2,6 +2,13 @@
 {% load static %}
 {% block content %}
   <link rel="stylesheet" href="{% static 'core/deck-list.css' %}">
+  <div class="instructions-title">
+        <p>Instructions<br></p>
+    </div>
+  <div class="instructions-list">
+        <p>1. This is the page where all of your flashcard sets are stored<br></p>
+        <p>2. You can access a specific flashcard set by clicking the name below.</p>
+    </div>
   <table>
     <thead>
       <tr>
