--- a/decks/templates/decks/deck_list.html
+++ b/decks/templates/decks/deck_list.html
@@ -6,9 +6,9 @@
         <p>Instructions<br></p>
     </div>
   <div class="instructions-list">
-        <p>1. This is the page where all of your flashcard sets are stored<br></p>
+        <p>1. This is the page where all of your flashcard sets are stored.<br></p>
         <p>2. You can access a specific flashcard set by clicking the name below.</p>
-    </div>
+  </div>
   <table>
     <thead>
       <tr>
