--- a/decks/templates/decks/deck_detail.html
+++ b/decks/templates/decks/deck_detail.html
@@ -12,9 +12,9 @@
     <p>2. If you need to edit a specific flashcard, click on that flashcard and follow the next instructions.<br></p>
     <p>3. If you want to review the flashcard set, click the "Review" button.<br></p>
     <p>4. If you want to shuffle the flashcards in the flashcard set, click the "Shuffle Cards" button.<br></p>
-    <p>5. If you want to edit the title or description of this flashcard set, click the "Edit" button.<br></p>
+    <p>5. If you want to edit the title or description of this flashcard set or publish or unblish this flashcard set, click the "Edit" button.<br></p>
     <p>6. If you want to delete this flashcard set, click the "Delete" button.<br></p>
-    <p>6. If you want to add a new flashcard to this flashcard set, click the "New Card" button.<br></p>
+    <p>6. If you want to add a new flashcard to this flashcard set, click the "New Card" button.</p>
 </div>
 <div class="deck-info">
     <h1>{{ deck.name }}</h1>
