--- a/decks/templates/decks/card_detail.html
+++ b/decks/templates/decks/card_detail.html
@@ -2,6 +2,15 @@
 {% load static %}
 {% block content %}
     <link rel="stylesheet" href="{% static 'core/card_detail.css' %}">
+    <div class="instructions-title">
+        <p>Instructions<br></p>
+    </div>
+    <div class="instructions-list">
+        <p>1. This is the page where to edit the flsahcard.<br></p>
+        <p>2. If no more edits are needed, click the "Back to Deck" button.<br></p>
+        <p>3. If the front or back text needs editing, click the "Edit" button.<br></p>
+        <p>4. If you want to delete this flashcard, click the "Delete" button.<br></p>
+    </div>
     <div class="card-navigation">
         <a href="{{ card.deck.get_absolute_url }}">Back to Deck</a>
         <a href="{% url 'card-update' pk=card.pk %}">Edit</a>
