--- a/core/static/core/create.css
+++ b/core/static/core/create.css
@@ -1,4 +1,4 @@
-.create-instructions {
+/* .create-instructions {
   margin-top: 30px;
   margin-bottom: 0px;
   padding: 20px;
@@ -41,4 +41,34 @@
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+.create_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
+  justify-content: center;
+  margin-bottom: 10vh;
+}
+.create_instructions {
+  font-size: 2.2rem;
+  margin-top: 6vh;
+  margin-bottom: 2vh;
+}
+.instructions-list {
+  font-size: 1.4rem;
+  width: 40vw;
+}
+.create-deck-button {
+    background-color: #BFD0CD;
+    color: black;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);  
+    font-size: 1.5rem; 
+    padding: 1vh 3vw;
+    margin-top: 2vh;
+    display: flex;
+}
+.create-deck-button:hover {
+    background-color: #B8C3BD;
 }
