Implement FSRS client

--- a/reviews/templates/reviews/review.html
+++ b/reviews/templates/reviews/review.html
@@ -8,5 +8,7 @@
     {{ deck_pk|json_script:"deck-pk" }}
     <div class="border rounded m-3" id="card"></div>
     <input type="text" id="answer">
-    <button id="submit-btn">Submit</button>
+    <button id="flip-btn">Flip</button>
+    <button id="good-btn">Good</button>
+    <button id="again-btn">Again</button>
 {% endblock content %}
