--- a/decks/templates/decks/deck_form.html
+++ b/decks/templates/decks/deck_form.html
@@ -5,7 +5,7 @@
 <div class="deck_form_container">
 <form method="post" class="deck-form">{% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Save" class="save-button3">
+    <input type="submit" value="Save" class="save_button">
 </form>
 </div>
 {% endblock content %}
