--- a/core/static/core/deck_form.css
+++ b/core/static/core/deck_form.css
@@ -19,7 +19,7 @@
   flex-direction: column;
   align-items: center; 
   justify-content: center;
-  margin-top: 10vh;
+  margin-top: 10vh; 
 }
 .deck-form input {
     width: 26vw;
@@ -29,7 +29,9 @@
     height: 5vh;
     padding: 10px;
     color: black;
-    font-size: 1.2rem;
+    font-size: 1.1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  
+    
 }
 .deck-form textarea{
     width: 26vw;
@@ -41,6 +43,10 @@
     color: black;
     font-size: 1.2rem;
     resize: none;
+    outline: none;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);  
+
+    
 }
 .deck-form label {
     font-size: 1.3rem;
@@ -49,4 +55,14 @@
     outline: none; 
     box-shadow: none;
     color: black;
+}
+.save_button {
+    background-color: #BFD0CD;
+    border: none;
+    border-radius: 15px;
+    margin-top: 5vh;
+}
+.save_button:hover {
+    background-color: #B8C3BD;
+
 }
