--- a/quiz/templates/quiz/quiz_form.html
+++ b/quiz/templates/quiz/quiz_form.html
@@ -1,8 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <input type="submit" value="Save">
-    </form>
+    <div class="m-4">
+        <form method="post">
+            {% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit">Create Quiz</button>
+        </form>
+    </div>
 {% endblock content %}
