--- a/quiz/static/quiz/quiz.css
+++ b/quiz/static/quiz/quiz.css
@@ -20,6 +20,18 @@
     text-decoration: none;
 }
 
+.back-quiz-list-button {
+    background-color: #B8C3BD;
+    color: black;
+    border: 3px solid black;
+    border-radius: 20px;
+    padding: 15px;
+    margin: 10px;
+    width: 200px;
+    font-family: "Courier New";
+    text-decoration: none;
+}
+
 .border_rounded_m-3 {
     color: black;
     background-color: white;
