--- a/quiz/templates/quiz/quiz.html
+++ b/quiz/templates/quiz/quiz.html
@@ -23,5 +23,8 @@
         <div class="back-deck-button">
             <a href="/decks/{{ deck.pk }}/">Back to Deck</a>
         </div>
+        <div class="back-quiz-list-button">
+            <a href="{% url 'quiz-list' %}" >Back to Quiz List</a>
+        </div>
     </div>
 {% endblock content %}
