--- a/decks/templates/decks/deck_list.html
+++ b/decks/templates/decks/deck_list.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
   <link rel="stylesheet" href="{% static 'core/deck-list.css' %}">
-  <link rel="stylesheet" href="{% static 'core/instructions.css' %}">
+  <link rel="stylesheet" href="{% static 'core/deck-instructions.css' %}">
   <div class="instructions-title">
       <p>Instructions<br></p>
   </div>
