--- a/quiz/templates/quiz/quiz_list.html
+++ b/quiz/templates/quiz/quiz_list.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% load static %}
 {% block content %}
-  <link rel="stylesheet" href="{% static 'core/deck-list.css' %}">
-  <link rel="stylesheet" href="{% static 'core/instructions.css' %}">
+  <link rel="stylesheet" href="{% static 'core/quiz-list.css' %}">
+  <link rel="stylesheet" href="{% static 'core/quiz-instructions.css' %}">
   <div class="instructions-title">
       <p>Instructions<br></p>
   </div>
@@ -13,7 +13,7 @@
   <table class="deck_list_container">
     <thead>
       <tr>
-        <th class="deck_list_title">Your Quizzes</th>
+        <th class="deck_list_title">Your Flashcard Sets</th>
       </tr>
     </thead>
   {% if deck_list %}
