--- a/core/templates/core/create.html
+++ b/core/templates/core/create.html
@@ -18,9 +18,9 @@
         <p>6. In your deck, you can click the card to edit or delete that card.</p>
         <p>7. Once done, click the "Back to Flashcard Sets" buttons to go back to your flashcard sets.</p>
     </div>
-    <div class="create-deck-button">
-      <a href="{% url 'deck-create' %}">Create Deck</a>
-    </div>
+    <a href="{% url 'deck-create' %}" class="create-deck-button">
+      <div>Create Deck</div>
+    </a>
 </div>
 {% endif %}
 
