--- a/core/static/core/deck-detail.css
+++ b/core/static/core/deck-detail.css
@@ -60,6 +60,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     padding-bottom: 10%;  
     transition: transform 0.3s ease-in-out 0s;
+    border-radius: 15px;
 
 
 }
