--- a/core/static/core/card_confirm_delete.css
+++ b/core/static/core/card_confirm_delete.css
@@ -1,4 +1,4 @@
-.btn-btn-primary {
+/* .btn-btn-primary {
     background-color: green;
     color: white;
     border: 3px solid black;
@@ -55,4 +55,41 @@
 
 .delete-question {
     margin-top: 30px;
+} */
+
+.cancel {
+    background-color: #BFD0CD;
+    border: none;
+    border-radius: 15px;
+    padding: 1vh 2vw;
+    margin-left: 2vw;
+    font-size: 1.1rem;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+}
+.cancel:hover {
+    background-color: #B8C3BD;
+}
+.confirm {
+      background-color: #21B78F;
+    border: none;
+    border-radius: 15px;
+    padding: 1vh 2vw;
+    font-size: 1.1rem;
+    color: white;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+
+}
+.confirm:hover {
+    background-color: #19896D;
+
+}
+.text {
+    font-size: 1.5rem;
+    margin-top: 2vh;
+    margin-left: 2vw;
+}
+.center {
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
 }
