--- a/decks/templates/decks/card_confirm_delete.html
+++ b/decks/templates/decks/card_confirm_delete.html
@@ -4,10 +4,12 @@
   <link rel="stylesheet" href="{% static 'core/card_confirm_delete.css' %}">
     <form method="post" class="delete-question" >
         {% csrf_token %}
-        <p>Are you sure you want to delete this card?</p>
+        <p class="text">Are you sure you want to delete this card?</p>
         {% include "decks/_card_preview.html" %}
         {{ form }}
-        <a href="{{ card.get_absolute_url }}" class="btn-btn-primary">Cancel</a>
-        <input type="submit" value="Confirm" class="btn-btn-danger">
+        <div class="center">
+          <a href="{{ card.get_absolute_url }}" class="cancel">Cancel</a>
+          <input type="submit" value="Confirm" class="confirm">
+        </div>
     </form>
 {% endblock content %}
