--- a/core/static/core/_card_preview.css
+++ b/core/static/core/_card_preview.css
@@ -1,4 +1,4 @@
-.border_rounded {
+/* .border_rounded {
     margin-top: 5px;
     margin-bottom: 5px;
     background-color: white;
@@ -6,4 +6,31 @@
     border: 3px solid black;
     border-radius: 20px;
     font-family: "Courier New";
-}
+} */
+ .card-back {
+    background-color: #BFD0CD;
+    width: 35%;
+    margin: 5vh auto 2vh auto; 
+    padding-bottom: 11vh;
+    position: relative;
+    height: 25vh;
+ }
+ .card {
+    background-color: #E3EDEA;
+    width: 95%;
+    margin: 0 auto;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    padding-bottom: 10vh;
+    border-radius: 15px;
+
+    /* Absolute centering */
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+ }
+ .card-word {
+    font-size: 1.2rem;
+    margin-left: .5vw;
+    margin-top: .5vh;
+ }
