--- a/core/static/core/card_detail.css
+++ b/core/static/core/card_detail.css
@@ -1,4 +1,4 @@
-.card-navigation a {
+/* .card-navigation a {
     text-decoration: none;
     background-color: #BFD0CD;
     color: black;
@@ -12,4 +12,25 @@
 .card-navigation {
     margin-bottom: 30px;
     margin-top: 30px;
+} */
+
+.card-navigation {
+    display: flex;
+    gap: 5rem;
+    margin-bottom: 2vh;
+    margin-left: 2vw;
+}
+.card-options {
+    background-color: #BFD0CD;
+    color: black;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);  
+    font-size: 1.2rem; 
+    padding: 1vh;
+    width: 11vw;
+    text-align: center;
+}
+.card-options:hover {
+    background-color: #B8C3BD;
 }
