--- a/decks/templates/decks/_card_preview.html
+++ b/decks/templates/decks/_card_preview.html
@@ -1,7 +1,9 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'core/_card_preview.css' %}">
-<div class="border_rounded">
-    <div class="m-3">{{ card.front }}</div>
-    <hr>
-    <div class="m-3">{{ card.back }}</div>
+<div class="card-back">
+    <div class="card">
+        <div class="card-word">{{ card.front }}</div>
+        <hr>
+        <div class="card-word">{{ card.back }}</div>
+    </div>
 </div>
