--- a/decks/templates/decks/deck_detail.html
+++ b/decks/templates/decks/deck_detail.html
@@ -2,7 +2,7 @@
 {% load static %}
 {% block content %}
     <link rel="stylesheet" href="{% static 'core/deck-detail.css' %}">
-    <link rel="stylesheet" href="{% static 'core/instructions.css' %}">
+    <link rel="stylesheet" href="{% static 'core/deck-instructions.css' %}">
     <div class="instructions-title">
         <p>Instructions<br></p>
     </div>
@@ -29,7 +29,7 @@
     <div class="card-list">
         {% for card in cards %}
             <div class="card-border">
-                <p>Scheduled: {{ card.due }}</p>
+                <!-- <p>Scheduled: {{ card.due }}</p> -->
                 <a href="{{ card.get_absolute_url }}" class="card-link">
                     <div class="card-front">{{ card.front }}</div>
                     <div class="card-divider"></div>
