color contrast change

--- a/decks/templates/decks/shared.html
+++ b/decks/templates/decks/shared.html
@@ -45,7 +45,7 @@
                     {% elif forloop.counter0|add:'2'|divisibleby:3 %}
                         <div style="color: darkred; margin-bottom: 0.25em; white-space: pre-wrap;">{{ item }}</div>
                     {% else %}
-                        <div style="color: darkmagenta; margin-bottom: 0.25em; white-space: pre-wrap;">{{ item }}</div>
+                        <div style="color: #7b4ecf; margin-bottom: 0.25em; white-space: pre-wrap;">{{ item }}</div>
                     {% endif %}
 
                     {% if forloop.last or forloop.counter|divisibleby:3 %}
